name:                opaleye-trans
version:             0.3.1
synopsis:            A monad transformer for Opaleye
description:         A monad transformer for Opaleye
homepage:            https://github.com/tomjaguarpaw/haskell-opaleye
license:             BSD3
license-file:        LICENSE
author:              Matthew Wraith
maintainer:          wraithm@gmail.com
copyright:           (c) 2015 Bitnomial, Inc
category:            Database
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/WraithM/opaleye-trans

Flag build-examples
  Description:   Build example apps
  Default:       True

library
  hs-source-dirs:      src
  exposed-modules:     Opaleye.Trans
                       Opaleye.Types
  -- other-modules:
  default-language:    Haskell2010
  build-depends:
    base                >=4.8 && <4.12,
    mtl                 >=2.2 && <2.3,
    transformers        >=0.3 && <0.6,
    transformers-base   >=0.4 && <0.5,
    opaleye             >=0.4 && <0.7,
    postgresql-simple   >=0.4 && <0.6,
    product-profunctors >=0.6 && <0.11,
    text                >=1.2 && <1.3

executable opaleye-rosetree
  if !flag(build-examples)
    Buildable: False
  hs-source-dirs:      examples/v1
  main-is:             RoseTree.hs
  default-language:    Haskell2010
  build-depends:
    base                >=4.8 && <4.12,
    transformers        >=0.3 && <0.6,
    opaleye             >=0.4 && <0.7,
    postgresql-simple   >=0.4 && <0.6,
    product-profunctors >=0.6 && <0.11,
    opaleye-trans

executable opaleye-rosetree2
  if !flag(build-examples)
    Buildable: False
  hs-source-dirs:      examples/v2
  main-is:             RoseTree.hs
  default-language:    Haskell2010
  build-depends:
    base                >=4.8 && <4.12,
    transformers        >=0.3 && <0.6,
    opaleye             >=0.4 && <0.7,
    postgresql-simple   >=0.4 && <0.6,
    product-profunctors >=0.6 && <0.11,
    opaleye-trans
